// XNAGameEngine | Hypo Klarich | 3/11/2014								//
// -CollisionManager.cs -Game1.cs -GameInterface.cs -GameObject.cs		//
// -Time: 11:00am - 1:38pm = 2:38										//
// -Notes: Collision is up and running. This is an un-optimized version //
// but is good enough for our first few projects.						//
//////////////////////////////////////////////////////////////////////////

XNAGameEngine | Jacqulyn Wong | 3/20/2014
-PhysicsManager.cs
-Time: 9:00pm - 10:00pm = 1:00
-Notes: Messed with the physics. I think they all collide now, but they just
ram into each other. Maybe it's their difference in velocities now.

XNAGameEngine | Eric Flores | 3/20/2014
-GameScreen.cs
-Time: 12:30pm - 3:00pm = 2:30
-Notes: Added the properties to GameScreen.cs still not finished with it but i
did put comments in for what i have so far. Also i put the harpoon to the mouse.

XNAGameEngine | Hypo Klarich | 3/20/2014
-ChangeLog.txt
-Time: 11:30am - 11:50am = 0:20
-Notes: Check your assignements and file responcibility, if you don't know 
what you should be working on its listed under your name there.

XNAGameEngine | Chase Arenella | 3/20/2014
-ChangeLog.txt
-Time: 9:37am - 9:47am = 0:10
-Notes: Synced up with 2013 and github I am now on the project.

XNAGameEngine | Eric Flores | 3/19/2014
-Assets -GameStateManager.cs -GameScreen.cs
-Time: 10:00pm - 10:40pm = 0:40
-Notes: Added art to Assets folder. Added 2 new class GameStateManager.cs and
GameScreen.cs just setting up and messing around with ideas neither works with
the code YET.

XNAGameEngine | Hypo Klarich | 3/15/2014
-CollisionManager.cs -Debug.cs -Gaame1.cs -GameObjects.cs -PhysicsManager.cs
-Time: 11:00am - 11:20am = 0:20
-Notes: Worked on collision no changes...

XNAGameEngine | Michael | 3/14/2014
-Event.cs - GameInterface.cs - InputManger.cs - Mouse.cs
-Time: 6:00pm - 12:39am = 6:39 (With Long Breaks)
-Notes: Cleaned up Event and InputManager class. Event is now called InputEvent